<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_classes">

    <fragment
        android:id="@+id/navigation_class_list"
        android:name="com.varda.table.ui.classList.FragmentClassList"
        android:label="@string/title_class_list"
        tools:layout="@layout/fragment_class_list" />

    <fragment
        android:id="@+id/navigation_classes"
        android:name="com.varda.table.ui.classes.FragmentClasses"
        android:label="@string/title_classes"
        tools:layout="@layout/fragment_classes" />

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.varda.table.ui.notes.FragmentNotes"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notes" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.varda.table.ui.settings.FragmentSettings"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>